--- a/BackEnd/spring-boot-ecommerce/src/main/resources/application.properties
+++ b/BackEnd/spring-boot-ecommerce/src/main/resources/application.properties
@@ -1,19 +1,6 @@
-# C?u hình c? s? d? li?u
-spring.datasource.url=jdbc:mysql://localhost:3306/full-stack-ecommerce
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/full-stack-ecommerce?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123123tem
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# C?u hình HikariCP
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.auto-commit=true
-
-# C?u hình Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.data.rest.base-path=/api
